# sdl-cmake-project

./: .directory  .gitignore  CMakeLists.txt  default.nix
src/: main.cpp
