project(testgame)

cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")

add_executable(${PROJECT_NAME} src/main.cpp)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES})

#SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
#FIND_PACKAGE(SFML 2 REQUIRED system window graphics network audio)
#PKG_SEARCH_MODULE(SFML REQUIRED sfml-all)
#INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SFML_LIBRARIES})
